# IbPinyinLib

./: .gitignore  Cargo.toml  IbPinyinLib.sln  README.md  publish.ps1
C++/: .gitignore  CMakeLists.txt  README.md
C++/source/: pinyin.cpp
Data/: generate.py
PinyinLib/: DoublePinyin.cpp  Pinyin.cpp  Pinyin.hpp  PinyinLib.vcxproj  PinyinLib.vcxproj.filters  data.cpp  framework.h
Test/: Test.cpp  Test.vcxproj
benches/: matcher.rs  regex.rs
bindings/ahk2/: .gitignore  README.md  build.ps1  example.ahk  publish.ps1
bindings/ahk2/Lib/: IbPinyin.ahk
bindings/c/: Cargo.toml  README.md
bindings/c/examples/cmake/: .gitignore  CMakeLists.txt  main.c
bindings/c/include/ib_pinyin/: ib_pinyin.h  notation.h
bindings/c/src/: lib.rs
bindings/diplomat/: Cargo.toml  bindgen.ps1
bindings/diplomat/include/ib_pinyin/: ib_pinyin.d.h  ib_pinyin.h
data/: REAMDE.md  generate.py
ib-matcher/: Cargo.toml  README.md
ib-matcher/benches/: analyze.rs  matcher.rs  regex.rs
ib-matcher/examples/: basic.rs
ib-matcher/src/: lib.rs  minimal.rs
ib-matcher/src/matcher/: analyze.rs  ascii.rs  encoding.rs  input.rs  matches.rs  mod.rs  pattern.rs  pinyin.rs  romaji.rs
ib-matcher/src/pinyin/: mod.rs  notation.rs
ib-matcher/src/syntax/: mod.rs
ib-matcher/src/unicode/: mod.rs
ib-matcher/src/unicode/case/: mod.rs
ib-pinyin/: Cargo.toml  README.md
ib-pinyin-cpp/: README.md
ib-pinyin-cpp/include/IbPinyin/: pinyin.hpp
ib-pinyin/bindings/ahk2/: README.md  build.ps1  publish.ps1
ib-pinyin/bindings/ahk2/Lib/: IbPinyin.ahk
ib-pinyin/bindings/c/: Cargo.toml  README.md
ib-pinyin/bindings/c/include/ib_pinyin/: ib_pinyin.h
ib-pinyin/bindings/diplomat/: Cargo.toml  build.rs
ib-pinyin/bindings/diplomat/src/: lib.rs
ib-pinyin/data/: generate.py
ib-pinyin/src/: lib.rs  matcher.rs  minimal.rs  pinyin.rs
ib-romaji/: Cargo.toml  README.md
ib-romaji/benches/: romaji.rs  words.rs
ib-romaji/data/: .gitignore  dict.ipynb  dict.ps1  kana.py
ib-romaji/src/: lib.rs
ib-romaji/src/data/: kana.rs  kanjis.rs  mod.rs  word_kanas.rs  words.in.txt
ib-unicode/: Cargo.toml
ib-unicode/src/: lib.rs  str.rs
source/: data.cpp  double_pinyin.cpp
src/: README.md  lib.rs  matcher.rs  minimal.rs
src/matcher/: analyze.rs  encoding.rs  mod.rs  regex_utils.rs  unicode.rs
src/pinyin/: data.rs  mod.rs  notation.rs
src/unicode/: mod.rs
src/unicode/case/: map.rs  mod.rs
test/: test.cpp
