[workspace]
members = [
    "bindings/c",
    # "bindings/diplomat"
]

[workspace.package]
version = "0.2.7"
authors = ["Chaoses-Ib"]
description = "一个高性能拼音匹配库"
homepage = "https://github.com/Chaoses-Ib/IbPinyinLib"
repository = "https://github.com/Chaoses-Ib/IbPinyinLib"
license = "MIT"
keywords = ["pinyin", "cjk"]

[package]
name = "ib-pinyin"
edition = "2021"
rust-version = "1.75"
version.workspace = true
authors.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
inmut-data = []
minimal = ["inmut-data"]
encoding = ["dep:widestring"]

[dependencies]
arraystring = "0.3.0"
bitflags = "2.4.1"
bon = "3"
itertools = "0.14"
# TODO: perf-dfa-full
regex = { version = "1.10.2", default-features = false, features = [
    "std",
    "perf",
] }
widestring = { version = "1.0.2", optional = true }

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "matcher"
harness = false
