[workspace]
members = [
    "ib-matcher",
    "ib-pinyin",
    "ib-pinyin/bindings/c",
    # "ib-pinyin/bindings/diplomat"
    "ib-romaji",
]
resolver = "3"

[workspace.package]
authors = ["Chaoses-Ib"]
homepage = "https://github.com/Chaoses-Ib/ib-matcher"
repository = "https://github.com/Chaoses-Ib/ib-matcher"
license = "MIT"
