[package]
name = "ib-matcher"
version = "0.3.0"
edition = "2021"
rust-version = "1.75"
description = "一个高性能拼音匹配库"
keywords = ["pinyin", "cjk"]
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["perf"]

pinyin = ["dep:arraystring", "dep:bitflags"]
romaji = ["dep:ib-romaji"]

perf = ["unicode-case-map"]
# -37% match time, +38 KiB
unicode-case-map = []

# Build size +837.5 KiB
regex = ["dep:regex"]

inmut-data = []
minimal = ["inmut-data", "pinyin"]
encoding = ["dep:widestring"]

[dependencies]
aho-corasick = "1"
arraystring = { version = "0.3", optional = true }
bitflags = { version = "2", optional = true }
bon = "3"
ib-romaji = { version = "0.1", optional = true, path = "../ib-romaji" }
itertools = "0.14"
# TODO: perf-dfa-full
regex = { version = "1.10.2", default-features = false, features = [
    "std",
    "perf",
], optional = true }
widestring = { version = "1.0.2", optional = true }

[dev-dependencies]
criterion = "0.6"
daachorse = "1"

[[bench]]
name = "matcher"
harness = false

[[bench]]
name = "regex"
harness = false
# cargo bench --bench regex --features regex
