[package]
name = "ib-romaji"
version = "0.1.0"
edition = "2024"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
bon = "3"
daachorse = "1"

[[bench]]
name = "romaji"
harness = false

[dev-dependencies]
aho-corasick = "1"
criterion = "0.6"
indexmap = "2"

[[bench]]
name = "words"
harness = false
