[package]
name = "ib-unicode"
version = "0.1.0"
edition = "2021"
description = "Unicode utils"
keywords = ["unicode", "case"]
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
document-features = { version = "0.2.11", optional = true }

[features]
default = []

## Enables all performance related features. This feature is intended to cover all reasonable features that improve performance, even if more are added in the future.
perf = ["perf-unicode-case-map"]
## -37% match time, +38 KiB
perf-unicode-case-map = []

doc = ["dep:document-features"]

[package.metadata.docs.rs]
# We want to document all features.
all-features = true
# Since this crate's feature setup is pretty complicated, it is worth opting
# into a nightly unstable option to show the features that need to be enabled
# for public API items. To do that, we set 'docsrs', and when that's enabled,
# we enable the 'doc_auto_cfg' feature.
#
# To test this locally, run:
# ```
# RUSTDOCFLAGS="--cfg docsrs" cargo +nightly doc --all-features
# $env:RUSTDOCFLAGS="--cfg docsrs"; cargo +nightly doc --all-features
# ```
rustdoc-args = ["--cfg", "docsrs"]
