[package]
name = "ib-pinyin-c"
version = "0.2.8"
edition = "2021"
description = "一个高性能拼音匹配库"
keywords = ["pinyin", "cjk"]
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["staticlib", "cdylib"]

[dependencies]
diplomat = "0.7.0"
diplomat-runtime = "0.7.0"
ib-pinyin = { path = "../..", features = ["minimal", "encoding"] }
widestring = "1.0.2"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1.12"

[package.metadata.winres]
LegalCopyright = "https://github.com/Chaoses-Ib/ib-matcher"
